--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
@@ -14,3 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Sample"
 include ':app'
+include ':sdk-alert'
