Builder pattern added. Dark mode feature added. Locale resource added.

--- a/donation/build.gradle
+++ b/donation/build.gradle
@@ -1,20 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
-    namespace 'com.example.sample'
+    namespace 'com.mobven.donation'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.sample"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -36,8 +35,6 @@ android {
 }
 
 dependencies {
-
-    implementation project(':donation')
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
